<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_home_gradient">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="start|bottom">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_fb"
                android:layout_marginRight="5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/facebook_ads"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cdBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:text="@string/banner_ads"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ellipse_card_corner"
                        android:layout_marginRight="10dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cdRectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:text="@string/rectangle_ad"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ellipse_card_corner_dark"
                        android:layout_marginRight="10dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cdInterstitial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:text="@string/interstitial_ad"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ellipse_card_corner"
                        android:layout_marginRight="10dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cdReward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:text="@string/reward_ad"
                        android:textColor="@android:color/black"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ellipse_card_corner_dark"
                        android:layout_marginRight="10dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="250dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#eaeaea" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cdGitHub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@drawable/bg_card_top_bar" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="10dp"
                            android:layout_weight="0"
                            android:src="@drawable/ic_github" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/join_me_on_github"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btGitHub"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/join_now"
                            android:textStyle="bold" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/privacy_policy"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>